--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <li><a href="lab-3/lab-3.html">Lab 3</a></li>
     <li><a href="lab-4/lab-4.html">Lab 4</a></li>
     <li><a href="lab-5/lab-5.html">Lab 5</a></li>
+    <li><a href="lab-6/index.html">Lab 6</a></li>
 
     <!-- Add more links for additional labs -->
   </ul>
